# projeto_pratico_1_manual_eng_dados

.github/workflows/: ci.yml
1_local_setup/: .env  docker-compose.yml  pyproject.toml
2_data_warehouse/dw_bootcamp/: dbt_project.yml  package-lock.yml  profiles.yml
2_data_warehouse/dw_bootcamp/models/mart/: mart_carrier_performance.sql  mart_delay_causes_share_month.sql
2_data_warehouse/dw_bootcamp/models/staging/: stg_airline_delay_cause.sql
3_airflow/: Dockerfile  docker-compose.override.yml  requirements.txt
3_airflow/.astro/: config.yaml
3_airflow/dags/: dag.py
3_airflow/dbt/dw_bootcamp/: .user.yml  packages.yml
3_airflow/dbt/dw_bootcamp/models/mart/: mart_airport_performance.sql  mart_delay_causes_long.sql  mart_monthly_kpis.sql
